fix card alignment in last row

--- a/client/public/styles/home.scss
+++ b/client/public/styles/home.scss
@@ -85,7 +85,3 @@
 .sdg-col {
   padding: 0px;
 }
-
-.padding {
-  margin-top: 30px;
-}
